ConfigGenerator: replace deprecated javax.xml.bind.DatatypeConverter
https://onedigi.atlassian.net/browse/DEL-7597

Signed-off-by: Hector Bujanda <hector.bujanda@digi.com>